welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    setCouleurBrosse() = Color
    ^MethodsPicture:4: error: object java.awt.Color is not a value
    setCouleurBrosse() = Color
                         ^